# iridium

./: .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CTestTestfile.cmake  Doxyfile  Doxyfile_en  Doxyfile_ru  Makefile  README.md  cert.pem  cmake_install.cmake  conanfile.new.py  conanfile.py  default.nix  iridium.kdev4  iridium.sln  key.pem  mainpage.md  mainpage_en.md  mainpage_ru.md  roadmap.txt  rootCA.crt  rootCA.key  utility.cbp  utility.sln
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
.kdev4/: iridium.kdev4
docs/: index.html  layout.xml
docs/en/html/: annotated.html  assert_8h.html  assert_8h__dep__incl.map  assert_8h__dep__incl.md5  assert_8h__incl.map  assert_8h__incl.md5  assert_8h_source.html  async__queue_8h.html  async__queue_8h__dep__incl.map  async__queue_8h__dep__incl.md5  async__queue_8h__incl.map  async__queue_8h__incl.md5  async__queue_8h_source.html  broadcaster_8h.html  broadcaster_8h__incl.map  broadcaster_8h_source.html  buffer_8cpp.html  buffer_8cpp__incl.map  buffer_8cpp__incl.md5  buffer_8h.html  buffer_8h__dep__incl.map  buffer_8h__dep__incl.md5  buffer_8h__incl.map  buffer_8h__incl.md5  buffer_8h_source.html  build__flags_8h.html  build__flags_8h__dep__incl.map  build__flags_8h__dep__incl.md5  build__flags_8h_source.html  build__info_8h.html  build__info_8h__incl.map  build__info_8h__incl.md5  build__info_8h_source.html  cache_8h.html  cache_8h__dep__incl.map  cache_8h__dep__incl.md5  cache_8h__incl.map  cache_8h__incl.md5  cache_8h_source.html  class_buffer-members.html  (+3311 more)
docs/ru/html/: annotated.html  assert_8h.html  assert_8h__dep__incl.map  assert_8h__incl.map  assert_8h__incl.md5  assert_8h_source.html  async__queue_8h.html  async__queue_8h__dep__incl.map  async__queue_8h__dep__incl.md5  async__queue_8h__incl.map  async__queue_8h__incl.md5  async__queue_8h_source.html  broadcaster_8h.html  broadcaster_8h__incl.md5  broadcaster_8h_source.html  buffer_8cpp.html  buffer_8cpp__incl.map  buffer_8cpp__incl.md5  buffer_8h.html  buffer_8h__dep__incl.map  buffer_8h__dep__incl.md5  buffer_8h__incl.map  buffer_8h__incl.md5  buffer_8h_source.html  build__flags_8h.html  build__flags_8h__dep__incl.map  build__flags_8h__dep__incl.md5  build__flags_8h_source.html  build__info_8h.html  build__info_8h__incl.map  build__info_8h__incl.md5  build__info_8h_source.html  cache_8h.html  cache_8h_source.html  class_buffer-members.html  class_buffer.html  class_buffer__inherit__graph.map  class_buffer__inherit__graph.md5  class_c_async_queue-members.html  class_c_async_queue.html  (+2986 more)
html/: annotated.html  assert_8h.html  assert_8h__dep__incl.map  assert_8h__dep__incl.md5  assert_8h__incl.md5  assert_8h_source.html  async__queue_8h.html  async__queue_8h__dep__incl.map  async__queue_8h__dep__incl.md5  async__queue_8h__incl.md5  async__queue_8h_source.html  broadcaster_8h.html  broadcaster_8h_source.html  buffer_8cpp.html  buffer_8cpp__incl.map  buffer_8cpp__incl.md5  buffer_8h.html  buffer_8h__dep__incl.map  buffer_8h__dep__incl.md5  buffer_8h__incl.map  buffer_8h_source.html  build__flags_8h.html  build__flags_8h__dep__incl.map  build__flags_8h__dep__incl.md5  build__flags_8h_source.html  build__info_8h.html  build__info_8h__incl.map  build__info_8h_source.html  cache_8h.html  cache_8h__incl.map  cache_8h__incl.md5  cache_8h_source.html  cached__value_8cpp.html  cached__value_8h.html  cached__value_8h__incl.map  cached__value_8h__incl.md5  cached__value_8h_source.html  class_buffer-members.html  class_buffer.html  class_buffer__inherit__graph.map  (+2203 more)
html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1d.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_25.js  all_26.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_b.js  classes_c.js  defines_2.js  (+46 more)
include/rapidxml/: rapidxml.hpp  rapidxml_print.hpp
iridium.xcodeproj/: project.pbxproj
iridium.xcodeproj/xcshareddata/xcschemes/: iridium.xcscheme
shell/: add-author-header.sh  cmake-clang.sh  cmake-gcc.sh  cmake.sh  generate-header-source.sh  generate-header-uuid.sh  generate-header.sh  install-git-hooks.sh  push-all-git-remotes.sh  pvs-check.sh  update-version.sh
shell/git-hooks/: pre-commit
source/iridium/: assert.h  build_flags.h  build_info.h  enum.h  iridium.vcxproj  iridium.vcxproj.filters  items.h  platform.h  smart_ptr.h  strings.cpp  strings.h  version.h
source/iridium-test/: iridium-test.vcxproj  iridium-test.vcxproj.filters  iridium_test.vcxproj.filters  main.cpp  main.h
source/iridium-test/convertion/: convert.cpp
source/iridium-test/db/: mysql.cpp  postgres.cpp  sql.cpp
source/iridium-test/io/: fifo.cpp  shared_memory_stream_port.cpp  socket.cpp  stream_port.cpp  uri.cpp
source/iridium-test/logging/: logger.cpp
source/iridium-test/parsing/: node.cpp  parsing.cpp
source/iridium-test/pattern/: fsm.cpp  fsm_switch.h  observer.cpp
source/iridium-test/system/: ipc.cpp  process.cpp
source/iridium-test/testing/: example.cpp
source/iridium-test/threading/: worker.cpp
source/iridium.rubius/: version.h
source/iridium/caching/: cached_value.cpp  cached_value.h  lazy_cacher.h
source/iridium/convertion/: convert.h  type_name.h
source/iridium/db/: config.cpp  config.h  connector.cpp  connector.h  factory.cpp  factory.h
source/iridium/io/: buffer.cpp  (+36 more)
source/iridium_test/: iridium_test.vcxproj  iridium_test.vcxproj.filters  main.cpp  test_pinescript.cpp  test_strings.cpp
source/utility/: assert.h  build_flags.h  enum.h  items.h  platform.h  smart_ptr.h  strings.cpp  strings.h  utility.vcxproj  utility.vcxproj.filters
source/utility_test/: test_strings.cpp  utility_test.vcxproj  utility_test.vcxproj.filters
tmp/: example.socket.unix.cpp
tmp/networking/: socket.h  socket_handler.h
utility.xcodeproj/: project.pbxproj
utility_test/source/: main.cpp
(+1073 files in other folders)
